manifests-openshift/acmeair-mainservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-main-route
spec:
#  host: _HOST_
  path: /acmeair
  to:
    kind: Service
    name: acmeair-main-service
